--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^13.6.0",
     "module": "^2.0.0",
     "mongodb": "^7.0.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "stripe": "^18.0.0"
   }
 }
